# text-vector

./: CMakeLists.txt  README.md  reader.hpp
examples/: CMakeLists.txt  text_vec.cpp
include/: mapper.hpp  word_vector.hpp
src/: CMakeLists.txt  downSampling.hpp  huffman.cpp  huffman.hpp  mapper.cpp  nsDistribution.cpp  nsDistribution.hpp  trainer.cpp  trainer.hpp  vocabulary.cpp  vocabulary.hpp  word_vector.cpp  worker.cpp  worker.hpp
tools/: CMakeLists.txt  accuracy.cpp  analogy.cpp  distance.cpp  trainer.cpp
